cppqsql/generated/qsql/qsqlParser.cpp

// Generated from qsql.g4 by ANTLR 4.7


#include "qsqlListener.h"
#include "qsqlVisitor.h"

#include "qsqlParser.h"


using namespace antlrcpp;
using namespace qsql;
using namespace antlr4;

qsqlParser::qsqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

qsqlParser::~qsqlParser() {
  delete _interpreter;
}

std::string qsqlParser::getGrammarFileName() const {
  return "qsql.g4";
}

const std::vector<std::string>& qsqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& qsqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartContext ------------------------------------------------------------------

qsqlParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qsqlParser::Qsql_queryContext* qsqlParser::StartContext::qsql_query() {
  return getRuleContext<qsqlParser::Qsql_queryContext>(0);
}

tree::TerminalNode* qsqlParser::StartContext::EOF() {
  return getToken(qsqlParser::EOF, 0);
}


size_t qsqlParser::StartContext::getRuleIndex() const {
  return qsqlParser::RuleStart;
}

void qsqlParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void qsqlParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}


antlrcpp::Any qsqlParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::StartContext* qsqlParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, qsqlParser::RuleStart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    qsql_query();
    setState(47);
    match(qsqlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qsql_queryContext ------------------------------------------------------------------

qsqlParser::Qsql_queryContext::Qsql_queryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qsqlParser::Qsql_queryContext::K_WHERE() {
  return getToken(qsqlParser::K_WHERE, 0);
}

qsqlParser::PredicateContext* qsqlParser::Qsql_queryContext::predicate() {
  return getRuleContext<qsqlParser::PredicateContext>(0);
}


size_t qsqlParser::Qsql_queryContext::getRuleIndex() const {
  return qsqlParser::RuleQsql_query;
}

void qsqlParser::Qsql_queryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQsql_query(this);
}

void qsqlParser::Qsql_queryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQsql_query(this);
}


antlrcpp::Any qsqlParser::Qsql_queryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitQsql_query(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Qsql_queryContext* qsqlParser::qsql_query() {
  Qsql_queryContext *_localctx = _tracker.createInstance<Qsql_queryContext>(_ctx, getState());
  enterRule(_localctx, 2, qsqlParser::RuleQsql_query);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(qsqlParser::K_WHERE);
    setState(50);
    predicate();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredicateContext ------------------------------------------------------------------

qsqlParser::PredicateContext::PredicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qsqlParser::Or_predicateContext* qsqlParser::PredicateContext::or_predicate() {
  return getRuleContext<qsqlParser::Or_predicateContext>(0);
}

qsqlParser::And_predicateContext* qsqlParser::PredicateContext::and_predicate() {
  return getRuleContext<qsqlParser::And_predicateContext>(0);
}

qsqlParser::Not_predicateContext* qsqlParser::PredicateContext::not_predicate() {
  return getRuleContext<qsqlParser::Not_predicateContext>(0);
}

qsqlParser::Par_predicateContext* qsqlParser::PredicateContext::par_predicate() {
  return getRuleContext<qsqlParser::Par_predicateContext>(0);
}

qsqlParser::Qs_predicateContext* qsqlParser::PredicateContext::qs_predicate() {
  return getRuleContext<qsqlParser::Qs_predicateContext>(0);
}


size_t qsqlParser::PredicateContext::getRuleIndex() const {
  return qsqlParser::RulePredicate;
}

void qsqlParser::PredicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPredicate(this);
}

void qsqlParser::PredicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPredicate(this);
}


antlrcpp::Any qsqlParser::PredicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitPredicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::PredicateContext* qsqlParser::predicate() {
  PredicateContext *_localctx = _tracker.createInstance<PredicateContext>(_ctx, getState());
  enterRule(_localctx, 4, qsqlParser::RulePredicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      or_predicate();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      and_predicate();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(54);
      not_predicate();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(55);
      par_predicate();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(56);
      qs_predicate();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Or_predicateContext ------------------------------------------------------------------

qsqlParser::Or_predicateContext::Or_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qsqlParser::PredicateContext *> qsqlParser::Or_predicateContext::predicate() {
  return getRuleContexts<qsqlParser::PredicateContext>();
}

qsqlParser::PredicateContext* qsqlParser::Or_predicateContext::predicate(size_t i) {
  return getRuleContext<qsqlParser::PredicateContext>(i);
}

tree::TerminalNode* qsqlParser::Or_predicateContext::K_OR() {
  return getToken(qsqlParser::K_OR, 0);
}


size_t qsqlParser::Or_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleOr_predicate;
}

void qsqlParser::Or_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOr_predicate(this);
}

void qsqlParser::Or_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOr_predicate(this);
}


antlrcpp::Any qsqlParser::Or_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitOr_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Or_predicateContext* qsqlParser::or_predicate() {
  Or_predicateContext *_localctx = _tracker.createInstance<Or_predicateContext>(_ctx, getState());
  enterRule(_localctx, 6, qsqlParser::RuleOr_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(qsqlParser::T__0);
    setState(60);
    predicate();
    setState(61);
    match(qsqlParser::K_OR);
    setState(62);
    predicate();
    setState(63);
    match(qsqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- And_predicateContext ------------------------------------------------------------------

qsqlParser::And_predicateContext::And_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qsqlParser::PredicateContext *> qsqlParser::And_predicateContext::predicate() {
  return getRuleContexts<qsqlParser::PredicateContext>();
}

qsqlParser::PredicateContext* qsqlParser::And_predicateContext::predicate(size_t i) {
  return getRuleContext<qsqlParser::PredicateContext>(i);
}

tree::TerminalNode* qsqlParser::And_predicateContext::K_AND() {
  return getToken(qsqlParser::K_AND, 0);
}


size_t qsqlParser::And_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleAnd_predicate;
}

void qsqlParser::And_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnd_predicate(this);
}

void qsqlParser::And_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnd_predicate(this);
}


antlrcpp::Any qsqlParser::And_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitAnd_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::And_predicateContext* qsqlParser::and_predicate() {
  And_predicateContext *_localctx = _tracker.createInstance<And_predicateContext>(_ctx, getState());
  enterRule(_localctx, 8, qsqlParser::RuleAnd_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(qsqlParser::T__0);
    setState(66);
    predicate();
    setState(67);
    match(qsqlParser::K_AND);
    setState(68);
    predicate();
    setState(69);
    match(qsqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Not_predicateContext ------------------------------------------------------------------

qsqlParser::Not_predicateContext::Not_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qsqlParser::Not_predicateContext::K_NOT() {
  return getToken(qsqlParser::K_NOT, 0);
}

qsqlParser::PredicateContext* qsqlParser::Not_predicateContext::predicate() {
  return getRuleContext<qsqlParser::PredicateContext>(0);
}


size_t qsqlParser::Not_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleNot_predicate;
}

void qsqlParser::Not_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNot_predicate(this);
}

void qsqlParser::Not_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNot_predicate(this);
}


antlrcpp::Any qsqlParser::Not_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitNot_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Not_predicateContext* qsqlParser::not_predicate() {
  Not_predicateContext *_localctx = _tracker.createInstance<Not_predicateContext>(_ctx, getState());
  enterRule(_localctx, 10, qsqlParser::RuleNot_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(qsqlParser::K_NOT);
    setState(72);
    predicate();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Par_predicateContext ------------------------------------------------------------------

qsqlParser::Par_predicateContext::Par_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qsqlParser::PredicateContext* qsqlParser::Par_predicateContext::predicate() {
  return getRuleContext<qsqlParser::PredicateContext>(0);
}


size_t qsqlParser::Par_predicateContext::getRuleIndex() const {
  return qsqlParser::RulePar_predicate;
}

void qsqlParser::Par_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPar_predicate(this);
}

void qsqlParser::Par_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPar_predicate(this);
}


antlrcpp::Any qsqlParser::Par_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitPar_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Par_predicateContext* qsqlParser::par_predicate() {
  Par_predicateContext *_localctx = _tracker.createInstance<Par_predicateContext>(_ctx, getState());
  enterRule(_localctx, 12, qsqlParser::RulePar_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(qsqlParser::T__0);
    setState(75);
    predicate();
    setState(76);
    match(qsqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qs_predicateContext ------------------------------------------------------------------

qsqlParser::Qs_predicateContext::Qs_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qsqlParser::Qs_tag_predicateContext* qsqlParser::Qs_predicateContext::qs_tag_predicate() {
  return getRuleContext<qsqlParser::Qs_tag_predicateContext>(0);
}

qsqlParser::Qs_string_predicateContext* qsqlParser::Qs_predicateContext::qs_string_predicate() {
  return getRuleContext<qsqlParser::Qs_string_predicateContext>(0);
}


size_t qsqlParser::Qs_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleQs_predicate;
}

void qsqlParser::Qs_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQs_predicate(this);
}

void qsqlParser::Qs_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQs_predicate(this);
}


antlrcpp::Any qsqlParser::Qs_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitQs_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Qs_predicateContext* qsqlParser::qs_predicate() {
  Qs_predicateContext *_localctx = _tracker.createInstance<Qs_predicateContext>(_ctx, getState());
  enterRule(_localctx, 14, qsqlParser::RuleQs_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case qsqlParser::K_TAG: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        qs_tag_predicate();
        break;
      }

      case qsqlParser::T__0:
      case qsqlParser::IDENTIFIER:
      case qsqlParser::K_NAME:
      case qsqlParser::K_TEXT:
      case qsqlParser::K_TYPE:
      case qsqlParser::K_AUTHOR:
      case qsqlParser::K_SOURCE:
      case qsqlParser::K_URL:
      case qsqlParser::K_GET: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        qs_string_predicate();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qs_tag_predicateContext ------------------------------------------------------------------

qsqlParser::Qs_tag_predicateContext::Qs_tag_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qsqlParser::Qs_tag_predicateContext::K_TAG() {
  return getToken(qsqlParser::K_TAG, 0);
}

qsqlParser::Qs_stringContext* qsqlParser::Qs_tag_predicateContext::qs_string() {
  return getRuleContext<qsqlParser::Qs_stringContext>(0);
}


size_t qsqlParser::Qs_tag_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleQs_tag_predicate;
}

void qsqlParser::Qs_tag_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQs_tag_predicate(this);
}

void qsqlParser::Qs_tag_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQs_tag_predicate(this);
}


antlrcpp::Any qsqlParser::Qs_tag_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitQs_tag_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Qs_tag_predicateContext* qsqlParser::qs_tag_predicate() {
  Qs_tag_predicateContext *_localctx = _tracker.createInstance<Qs_tag_predicateContext>(_ctx, getState());
  enterRule(_localctx, 16, qsqlParser::RuleQs_tag_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(qsqlParser::K_TAG);
    setState(83);
    qs_string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qs_string_predicateContext ------------------------------------------------------------------

qsqlParser::Qs_string_predicateContext::Qs_string_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qsqlParser::Qs_string_equal_predicateContext* qsqlParser::Qs_string_predicateContext::qs_string_equal_predicate() {
  return getRuleContext<qsqlParser::Qs_string_equal_predicateContext>(0);
}

qsqlParser::Qs_string_in_predicateContext* qsqlParser::Qs_string_predicateContext::qs_string_in_predicate() {
  return getRuleContext<qsqlParser::Qs_string_in_predicateContext>(0);
}

qsqlParser::Qs_string_match_predicateContext* qsqlParser::Qs_string_predicateContext::qs_string_match_predicate() {
  return getRuleContext<qsqlParser::Qs_string_match_predicateContext>(0);
}


size_t qsqlParser::Qs_string_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleQs_string_predicate;
}

void qsqlParser::Qs_string_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQs_string_predicate(this);
}

void qsqlParser::Qs_string_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQs_string_predicate(this);
}


antlrcpp::Any qsqlParser::Qs_string_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitQs_string_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Qs_string_predicateContext* qsqlParser::qs_string_predicate() {
  Qs_string_predicateContext *_localctx = _tracker.createInstance<Qs_string_predicateContext>(_ctx, getState());
  enterRule(_localctx, 18, qsqlParser::RuleQs_string_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(85);
      qs_string_equal_predicate();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(86);
      qs_string_in_predicate();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(87);
      qs_string_match_predicate();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qs_string_equal_predicateContext ------------------------------------------------------------------

qsqlParser::Qs_string_equal_predicateContext::Qs_string_equal_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qsqlParser::Qs_stringContext *> qsqlParser::Qs_string_equal_predicateContext::qs_string() {
  return getRuleContexts<qsqlParser::Qs_stringContext>();
}

qsqlParser::Qs_stringContext* qsqlParser::Qs_string_equal_predicateContext::qs_string(size_t i) {
  return getRuleContext<qsqlParser::Qs_stringContext>(i);
}

tree::TerminalNode* qsqlParser::Qs_string_equal_predicateContext::EQUAL() {
  return getToken(qsqlParser::EQUAL, 0);
}


size_t qsqlParser::Qs_string_equal_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleQs_string_equal_predicate;
}

void qsqlParser::Qs_string_equal_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQs_string_equal_predicate(this);
}

void qsqlParser::Qs_string_equal_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQs_string_equal_predicate(this);
}


antlrcpp::Any qsqlParser::Qs_string_equal_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitQs_string_equal_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Qs_string_equal_predicateContext* qsqlParser::qs_string_equal_predicate() {
  Qs_string_equal_predicateContext *_localctx = _tracker.createInstance<Qs_string_equal_predicateContext>(_ctx, getState());
  enterRule(_localctx, 20, qsqlParser::RuleQs_string_equal_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    qs_string();
    setState(91);
    match(qsqlParser::EQUAL);
    setState(92);
    qs_string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qs_string_in_predicateContext ------------------------------------------------------------------

qsqlParser::Qs_string_in_predicateContext::Qs_string_in_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qsqlParser::Qs_stringContext *> qsqlParser::Qs_string_in_predicateContext::qs_string() {
  return getRuleContexts<qsqlParser::Qs_stringContext>();
}

qsqlParser::Qs_stringContext* qsqlParser::Qs_string_in_predicateContext::qs_string(size_t i) {
  return getRuleContext<qsqlParser::Qs_stringContext>(i);
}

tree::TerminalNode* qsqlParser::Qs_string_in_predicateContext::K_IN() {
  return getToken(qsqlParser::K_IN, 0);
}


size_t qsqlParser::Qs_string_in_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleQs_string_in_predicate;
}

void qsqlParser::Qs_string_in_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQs_string_in_predicate(this);
}

void qsqlParser::Qs_string_in_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQs_string_in_predicate(this);
}


antlrcpp::Any qsqlParser::Qs_string_in_predicateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qsqlVisitor*>(visitor))
    return parserVisitor->visitQs_string_in_predicate(this);
  else
    return visitor->visitChildren(this);
}

qsqlParser::Qs_string_in_predicateContext* qsqlParser::qs_string_in_predicate() {
  Qs_string_in_predicateContext *_localctx = _tracker.createInstance<Qs_string_in_predicateContext>(_ctx, getState());
  enterRule(_localctx, 22, qsqlParser::RuleQs_string_in_predicate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    qs_string();
    setState(95);
    match(qsqlParser::K_IN);
    setState(96);
    qs_string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qs_string_match_predicateContext ------------------------------------------------------------------

qsqlParser::Qs_string_match_predicateContext::Qs_string_match_predicateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qsqlParser::Qs_stringContext *> qsqlParser::Qs_string_match_predicateContext::qs_string() {
  return getRuleContexts<qsqlParser::Qs_stringContext>();
}

qsqlParser::Qs_stringContext* qsqlParser::Qs_string_match_predicateContext::qs_string(size_t i) {
  return getRuleContext<qsqlParser::Qs_stringContext>(i);
}

tree::TerminalNode* qsqlParser::Qs_string_match_predicateContext::K_MATCH() {
  return getToken(qsqlParser::K_MATCH, 0);
}


size_t qsqlParser::Qs_string_match_predicateContext::getRuleIndex() const {
  return qsqlParser::RuleQs_string_match_predicate;
}

void qsqlParser::Qs_string_match_predicateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQs_string_match_predicate(this);
}

void qsqlParser::Qs_string_match_predicateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qsqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQs_string_match_predicate(this);
}

